# djangocms-animate-on-scroll

./: .pre-commit-config.yaml  README.rst  build_and_upload.txt  pyproject.toml  setup.py
djangocms_animate_on_scroll/: __init__.py  apps.py  cms_plugins.py  consts.py  forms.py  models.py  settings.py
djangocms_animate_on_scroll/locale/fr/LC_MESSAGES/: django.po
djangocms_animate_on_scroll/migrations/: 0001_initial.py  0002_auto_20180404_1810.py  0002_auto_20230302_1459.py  0003_animateonscroll_element_aos_mirror.py  0004_alter_animateonscroll_element_aos_once.py  0005_alter_animateonscroll_anchor_cmsplugin_ptr_and_more.py
djangocms_animate_on_scroll/templates/djangocms_animate_on_scroll/: aos_element.html
djangocms_animate_on_scroll/templates/djangocms_aos/: aos_element.html
djangocms_animate_on_scroll/templatetags/: stripwhitespaces.py
